Created basic GUI

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1,24 +1,77 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow" >
-  <property name="geometry" >
+ <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>883</width>
+    <height>494</height>
    </rect>
   </property>
-  <property name="windowTitle" >
-   <string>MainWindow</string>
+  <property name="windowTitle">
+   <string>MissionControl</string>
   </property>
-  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QWidget" name="gridLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>881</width>
+      <height>431</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="2" column="0">
+      <widget class="QGraphicsView" name="imageB"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QComboBox" name="comboA"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QGraphicsView" name="imageA"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QComboBox" name="comboB"/>
+     </item>
+     <item row="0" column="1">
+      <widget class="QGraphicsView" name="imageC"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="comboC"/>
+     </item>
+     <item row="2" column="1">
+      <widget class="QGraphicsView" name="imageD"/>
+     </item>
+     <item row="3" column="1">
+      <widget class="QComboBox" name="comboD"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>883</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
